Corrected HTML errors from validation checker.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div class="contact">
                     <label>Zip Code</label>
-                    <input type="text" id="zip" namer="user_zip" placeholder="12345">
+                    <input type="text" id="zip" name="user_zip" placeholder="12345">
                 </div>
                 
             </fieldset>
