Updated corrections for resubmission.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class="contact">
-                    <label>State</label>
+                    <label for="state">State</label>
                     <select id="state" name="user_state">
                         <option value="" selected disabled>Choose State</option>
                         <option value="AL">Alabama</option>
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="contact">
-                    <label>Zip Code</label>
+                    <label for="zip">Zip Code</label>
                     <input type="text" id="zip" name="user_zip" placeholder="12345">
                 </div>
                 
